src/objects/Partner__c.object
<CustomObject>
    <fields>
        <fullName>Preferred_Medical_Facility__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Preferred Medical Facility</label>
        <referenceTo>Medical_Facility__c</referenceTo>
        <relationshipLabel>Partners</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Referral Source</label>
        <referenceTo>Referral_Source__c</referenceTo>
        <relationshipLabel>Partners</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer_Contact__c</fullName>
        <label>Referrer Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <label>Referrer Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Referrer_Phone__c</fullName>
        <label>Referrer Phone</label>
        <type>Phone</type>
    </fields>
    <label>Partner</label>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>